kubernetes/apps/network/pod-gateway/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pod-gateway
  namespace: network
  labels:
    app.kubernetes.io/instance: pod-gateway
    app.kubernetes.io/name: pod-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: pod-gateway
      app.kubernetes.io/name: pod-gateway

  egress:
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "51820"
              protocol: UDP
            - port: "1637"
              protocol: UDP
    - toEntities:
        - cluster
  ingress:
    - icmps:
      - fields:
        - type: 8
          family: IPv4

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pod-gateway-vxlan
  namespace: network
  labels:
    app.kubernetes.io/instance: pod-gateway
    app.kubernetes.io/name: pod-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: pod-gateway
      app.kubernetes.io/name: pod-gateway
  egress:
    - toPorts:
        - ports:
            - port: "8472"
              protocol: UDP
  ingress:
    - toPorts:
        - ports:
            - port: "8472"
              protocol: UDP
    - icmps:
        - fields:
            - type: 8
              family: IPv4
